--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -1,2 +1,19 @@
-<h1>My top 5 Favourite Websites</h1>
 <!-- Write your code below -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Top 5</title>
+    </head>
+    <body>
+        <h1>My top 5 Favourite Websites</h1>
+        <ol>
+            <li> <a href="https://www.pexels.com/">Pexels </a></li>
+            <li> <a href="https://fonts.google.com/">Google Fonts </a></li>
+            <li> <a href="https://color.adobe.com/">Adobe Colors </a></li>
+            <li> <a href="https://www.iconarchive.com/">icon Archive </a></li>
+            <li> <a href="https://www.keybr.com/">KeyBR </a></li>
+        </ol>
+</body>
+</html>
