--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>My top 5 Favourite Websites</h1>
         <ol>
-            <li> <a href="https://www.pexels.com/">Pexels </a></li>
-            <li> <a href="https://fonts.google.com/">Google Fonts </a></li>
-            <li> <a href="https://color.adobe.com/">Adobe Colors </a></li>
-            <li> <a href="https://www.iconarchive.com/">icon Archive </a></li>
-            <li> <a href="https://www.keybr.com/">KeyBR </a></li>
+            <li> <a target="_blank" href="https://www.pexels.com/">Pexels </a></li>
+            <li> <a target="_blank" href="https://fonts.google.com/">Google Fonts </a></li>
+            <li> <a target="_blank" href="https://color.adobe.com/">Adobe Colors </a></li>
+            <li> <a target="_blank" href="https://www.iconarchive.com/">icon Archive </a></li>
+            <li> <a target="_blank" href="https://www.keybr.com/">KeyBR </a></li>
         </ol>
 </body>
 </html>
