added HTML boilerplate to all html files

--- a/2.3+Void+Elements/2.3 Void Elements/index.html
+++ b/2.3+Void+Elements/2.3 Void Elements/index.html
@@ -1,4 +1,12 @@
-<h1>William Blake </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Void Elements</title>
+</head>
+<body>
+    <h1>William Blake </h1>
 
 <p>
     <p>17 south molton street</p>
@@ -38,3 +46,6 @@
 
 
 
+
+</body>
+</html>
