--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -1,4 +1,12 @@
-<h1>Book</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>heading</title>
+</head>
+<body>
+  <h1>Book</h1>
   <h2>Chapter 1</h2>
     <h3>Section 1</h3>
     <h3>Section 2</h3>
@@ -8,3 +16,6 @@
   <h2>Chapter 3</h2>
     <h3>Section 1</h3>
     <h3>Section 2</h3>
+
+</body>
+</html>
