--- a/3.2 Anchor Elements/solution.html
+++ b/3.2 Anchor Elements/solution.html
@@ -1,4 +1,12 @@
-<h1>My top 5 Favourite Websites</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anchor</title>
+</head>
+<body>
+  <h1>My top 5 Favourite Websites</h1>
 <!-- Write your code below -->
 <ol>
   <li><a href="https://www.producthunt.com/">Product Hunt</a></li>
@@ -18,3 +26,5 @@
   <li><a href="https://hackertyper.com/">Hacker Typer</a></li>
   <li><a href="https://stellarium-web.org/">Stellarium</a></li>
 </ol>
+</body>
+</html>
