--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -20,8 +20,33 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Boilerplate</title>
+    <style>
+        img {
+            height: 200px;
+        }
+        a {
+            font-size: 1.2em;;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Matheus Sales Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr>
+    <p>
+        <a href="../2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html">Movie Ranking Project</a>
+
+        <p><img src="assets/images/movie-ranking.png" alt="movie-project-image"></p>
+    </p>
+
+    <p>
+        <a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a>
+
+        <p><img src="assets/images/birthday-invite.png" alt="invite-project-image"></p>
+    </p>
+
+    <hr>
+    <a href="#">About Me</a>
+    <a href="#">Contact Me</a>
 </body>
 </html>
