--- a/5.1. Adding CSS/index.html
+++ b/5.1. Adding CSS/index.html
@@ -4,11 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Adding CSS</title>
-</head>
-
+  <style>
+    body {
+      background-color: burlywood;
+    }
+    </style>
+    <link rel="stylesheet" href="style.css">
+    </head>
 <body>
-  <h1>Three Methods of Adding CSS</h1>
+  <h1 style="font-family: Arial, Helvetica, sans-serif; color: burlywood; background-color: brown;">Three Methods of Adding CSS</h1>
   <!-- Create 3 Links to The 3 Webpages: inline, internal and external -->
 </body>
-
+  <p>Testing CSS</p>
 </html>
