--- a/6.0 CSS Colors/index.html
+++ b/6.0 CSS Colors/index.html
@@ -11,6 +11,19 @@
     3. Make the background of the h1 "darkseagreen"
     4. Make the h2 #FAF8F1
     5. Make the background of the h2 "#C58940" */
+
+    body {
+      background-color: antiquewhite;
+    }
+
+    h1 {
+      background-color: darkseagreen;
+      color: whitesmoke;
+    }
+    h2 {
+      background-color: #c58940;
+      color: #faf8f1;
+    }
   </style>
 </head>
 
