--- a/6.1+Font+Properties/index.html
+++ b/6.1+Font+Properties/index.html
@@ -10,20 +10,42 @@
       color: white;
       font-size: 18px;
     }
-
+    
     /* Don't change the CSS above, add Your CSS below */
 
+    @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
+    :root {
+      font-size: 30px;
+    }
+
+    p[value="1"] {
+      color: coral;
+    }
+    p[value="2"] {
+      font-size: 2em;;
+    }
+    p[value="3"] {
+      font-weight: 900;
+    }
+    p[value="4"] {
+      font-family: 'Caveat', cursive;
+      font-size: normal;;
+    }
+    p[value="5"] {
+      text-align: right;
+    }
     
   </style>
 </head>
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
+  <p value="1">Color</p>
+  <p value="2">Font Size</p>
+  <p value="3">Font Weight</p>
+  <p value="4">Font Family</p>
+  <p value="5">Text Align</p>
 
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
