--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -12,5 +12,23 @@ But it must have the following features:
   Hint: You horizontally center a div by giving it a width of 50% and a margin-left of 25%.
   Hint: Set the image to have a width of 100% so it fills the div. 
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
-  https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
--->
+  https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform -->
+  
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>That Special Moment</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+
+    <div id="meme">
+      <img src="assets/images/daenerys.jpeg" alt="daenerys">
+      <h1>That Special Moment</h1>
+      <p>When you find the perfect avocado at the supermarket</p>
+      
+    </div>
+  </body>
+  </html>
