--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -5,6 +5,23 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    div.blue-box {
+      background-color: blue;
+      margin: 200px;
+      height: 300px;
+      width: 500px;
+    }
+
+    div.red-circle {
+      display: inline-block;
+      background-color: red;
+      height: 250px;
+      width: 250px;
+      border-radius: 175px;
+      margin-left: 200px;
+      margin-top: 100px;
+      overflow: visible;
+    }
   </style>
 </head>
 
