--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -5,8 +5,44 @@
   <meta charset="UTF-8">
   <title>CSS Flag Project</title>
   <style>
-    /* Write your CSS Code here */
-    
+    /* Write your CSS Code here
+    blue: rgb(0, 40, 104);
+    red:   rgb(206, 17, 38);
+    */
+
+    div.flag {
+      background-color: rgb(206, 17, 38);
+      width: 900px;
+      height: 600px;
+      position: relative;
+    }
+    div.flag > div {
+      background-color: rgb(0, 40, 104);
+      width: 100%;
+      height: 300px;
+      position: absolute;
+      top: 150px
+
+    }
+    div.flag > div > div {
+      background-color: white;
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      position: relative;
+      left:350px ;
+      top: 50px;
+    }
+
+    p {
+      font-size: 5rem;
+      margin: 0px;
+      text-align: center;
+      color: white;
+    }
+    div.flag > div > div > p {
+      color: black;
+    }
   </style>
 </head>
 
