--- a/8.1 CSS Float/index.html
+++ b/8.1 CSS Float/index.html
@@ -21,13 +21,16 @@
 
     .cat {
       background-color: aquamarine;
+      float: left;
     }
 
     .dog {
       background-color: coral;
+      float: right;
     }
 
     footer {
+      clear: both;
       text-align: center;
       background-color: blueviolet;
     }
